--- a/app/src/main/res/layout/contacts_item.xml
+++ b/app/src/main/res/layout/contacts_item.xml
@@ -7,30 +7,44 @@
         android:id="@+id/tv_id"
         android:layout_width="30dp"
         android:layout_height="match_parent"
-        android:textSize="20dp"
+        android:textSize="15dp"
+        android:textColor="#555"
+        android:background="#eee"
         android:gravity="center"
-        android:text="1" />
+        android:text="11" />
+
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="80dp"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:padding="5dp"
+        android:text="Name"
+        android:textSize="11dp" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name" />
+        android:orientation="vertical"
+        android:textColor="#333">
 
         <TextView
             android:id="@+id/tv_phone"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingLeft="20dp"
+            android:textSize="8dp"
             android:text="Phone" />
         <TextView
             android:id="@+id/tv_email"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingLeft="20dp"
+            android:textSize="8dp"
             android:text="Email" />
     </LinearLayout>
 
