--- a/app/src/main/res/layout/contacts_info.xml
+++ b/app/src/main/res/layout/contacts_info.xml
@@ -9,12 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_avatar"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-
-            app:srcCompat="@android:color/holo_blue_light" />
 
         <Button
             android:id="@+id/btn_back"
@@ -23,14 +17,32 @@
             android:layout_marginLeft="20dp"
             android:background="@drawable/ic_back"/>
 
+        <ImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            app:srcCompat="@drawable/info_background" />
+
+        <TextView
+            android:id="@+id/tv_id_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:textColor="#444"
+            android:text="10"
+            android:textSize="100dp" />
+
         <TextView
             android:id="@+id/tv_name_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="210dp"
+            android:layout_marginTop="150dp"
             android:paddingLeft="20dp"
+            android:textColor="#000"
             android:text="Name"
-            android:textSize="30dp" />
+            android:textSize="30dp"
+            android:textStyle="bold" />
 
     </FrameLayout>
 
@@ -42,20 +54,40 @@
         android:text="Phone"
         android:textSize="20dp" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        app:srcCompat="@android:color/darker_gray" />
+
     <TextView
         android:id="@+id/tv_email_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
         android:padding="10dp"
-        android:text="Email" />
+        android:text="Email"
+        android:textSize="20dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        app:srcCompat="@android:color/darker_gray" />
+
     <TextView
         android:id="@+id/tv_time_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
         android:padding="10dp"
-        android:text="Time" />
+        android:text="Time"
+        android:textSize="20dp" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        app:srcCompat="@android:color/darker_gray" />
+
     <TextView
         android:id="@+id/tv_remark_info"
         android:layout_width="match_parent"
