--- a/app/src/main/res/layout/contacts_item.xml
+++ b/app/src/main/res/layout/contacts_item.xml
@@ -1,26 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp"
+    android:background="#eee">
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_id"
+            android:layout_width="25dp"
+            android:layout_height="15dp"
+            android:background="@drawable/number_icon"
+            android:gravity="center"
+            android:text="22"
+            android:textColor="#eee"
+            android:textSize="7dp"
+            android:textStyle="bold" />
+    </FrameLayout>
 
     <TextView
-        android:id="@+id/tv_id"
-        android:layout_width="30dp"
+        android:id="@+id/tv_fristname"
+        android:layout_width="40dp"
         android:layout_height="match_parent"
-        android:textSize="15dp"
-        android:textColor="#555"
-        android:background="#eee"
+        android:background="@drawable/fristname_icon_1"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="20dp"
         android:gravity="center"
-        android:text="11" />
+        android:textColor="#000"
+        android:text="姓"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="80dp"
+        android:layout_width="100dp"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:padding="5dp"
         android:text="Name"
-        android:textSize="11dp" />
+        android:textSize="13dp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,20 +55,30 @@
             android:id="@+id/tv_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="20dp"
-            android:textSize="8dp"
-            android:text="Phone" />
+            android:paddingTop="2dp"
+            android:text="Phone"
+            android:textSize="12dp"
+            android:textStyle="italic" />
+
         <TextView
             android:id="@+id/tv_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="20dp"
-            android:textSize="8dp"
-            android:text="Email" />
+            android:paddingTop="2dp"
+            android:text="Email"
+            android:textSize="12dp"
+            android:textStyle="italic" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        app:srcCompat="?attr/colorButtonNormal" />
 
 </LinearLayout>
