--- a/app/src/main/res/layout/contacts_info.xml
+++ b/app/src/main/res/layout/contacts_info.xml
@@ -24,7 +24,7 @@
             app:srcCompat="@drawable/info_background" />
 
         <TextView
-            android:id="@+id/tv_id_info"
+            android:id="@+id/tv_count_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
