--- a/app/src/main/res/layout/contacts_item.xml
+++ b/app/src/main/res/layout/contacts_item.xml
@@ -13,27 +13,28 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_id"
-            android:layout_width="25dp"
-            android:layout_height="15dp"
+            android:id="@+id/tv_count"
+            android:layout_width="30dp"
+            android:layout_height="17dp"
             android:background="@drawable/number_icon"
             android:gravity="center"
             android:text="22"
             android:textColor="#eee"
-            android:textSize="7dp"
+            android:textSize="9dp"
             android:textStyle="bold" />
     </FrameLayout>
 
     <TextView
         android:id="@+id/tv_fristname"
-        android:layout_width="40dp"
-        android:layout_height="match_parent"
-        android:background="@drawable/fristname_icon_1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="20dp"
+        android:background="@drawable/fristname_icon_1"
         android:gravity="center"
+        android:text="a"
         android:textColor="#000"
-        android:text="姓"
+        android:textSize="25dp"
         android:textStyle="bold" />
 
     <TextView
@@ -42,10 +43,10 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:text="Name"
-        android:textSize="13dp"
-        android:textStyle="bold" />
+        android:textSize="15dp" />
 
     <LinearLayout
+        android:id="@+id/linerLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
