添加联系人列表按首字母分组功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,17 @@
         <ListView
             android:id="@+id/lv_contacts"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scrollbars="none"
+            android:divider="@null"/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/catalog"
         android:layout_width="15dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_marginRight="3dp"
+        android:layout_marginLeft="3dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="5dp">
     </LinearLayout>
