--- a/app/src/main/res/layout/contacts_item.xml
+++ b/app/src/main/res/layout/contacts_item.xml
@@ -1,85 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="5dp"
     android:paddingTop="5dp"
     android:background="#eee">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tv_count"
-            android:layout_width="30dp"
-            android:layout_height="17dp"
-            android:background="@drawable/number_icon"
-            android:gravity="center"
-            android:text="22"
-            android:textColor="#eee"
-            android:textSize="9dp"
-            android:textStyle="bold" />
-    </FrameLayout>
-
-    <TextView
-        android:id="@+id/tv_fristname"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/fristname_icon_1"
-        android:gravity="center"
-        android:text="a"
-        android:textColor="#000"
-        android:textSize="25dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:text="Name"
-        android:textSize="15dp" />
-
     <LinearLayout
-        android:id="@+id/linerLayout1"
+        android:id="@+id/liner_line"
+        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:textColor="#333">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_phone"
-            android:layout_width="match_parent"
+            android:id="@+id/tv_fristletter"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="2dp"
-            android:paddingLeft="20dp"
-            android:paddingTop="2dp"
-            android:text="Phone"
-            android:textSize="12dp"
-            android:textStyle="italic" />
+            android:padding="5dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="L"
+            android:textColor="#000"
+            android:textSize="20dp" />
 
-        <TextView
-            android:id="@+id/tv_email"
+        <ImageView
+            android:id="@+id/iv_line"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="2dp"
-            android:paddingLeft="20dp"
-            android:paddingTop="2dp"
-            android:text="Email"
-            android:textSize="12dp"
-            android:textStyle="italic" />
+            android:layout_height="1dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            app:srcCompat="?attr/colorButtonNormal" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        app:srcCompat="?attr/colorButtonNormal" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_count"
+                android:layout_width="30dp"
+                android:layout_height="17dp"
+                android:background="@drawable/number_icon"
+                android:gravity="center"
+                android:text="22"
+                android:textColor="#eee"
+                android:textSize="9dp"
+                android:textStyle="bold" />
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/tv_fristname"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/fristname_icon_1"
+            android:gravity="center"
+            android:text="a"
+            android:textColor="#000"
+            android:textSize="25dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="Name"
+            android:textSize="20dp" />
+
+        <LinearLayout
+            android:id="@+id/linerLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:textColor="#333">
+
+            <TextView
+                android:id="@+id/tv_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="2dp"
+                android:text="Phone"
+                android:textSize="12dp"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/tv_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="2dp"
+                android:text="Email"
+                android:textSize="12dp"
+                android:textStyle="italic" />
+        </LinearLayout>
+    </LinearLayout>
+
 
 </LinearLayout>
