添加ListView中点击item出现菜单栏的功能，更新界面。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,10 @@
         android:layout_width="15dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginRight="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="5dp">
+        android:background="#eee"
+        android:paddingRight="3dp"
+        android:paddingLeft="3dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="5dp">
     </LinearLayout>
 </LinearLayout>
