--- a/app/src/main/res/layout/contacts_item.xml
+++ b/app/src/main/res/layout/contacts_item.xml
@@ -40,6 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
+
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -49,6 +50,7 @@
                 android:layout_width="30dp"
                 android:layout_height="17dp"
                 android:background="@drawable/number_icon"
+                android:layout_marginTop="3dp"
                 android:gravity="center"
                 android:text="22"
                 android:textColor="#eee"
@@ -60,11 +62,11 @@
             android:id="@+id/tv_fristname"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/fristname_icon_1"
             android:gravity="center"
-            android:text="a"
+            android:text="A"
             android:textColor="#000"
             android:textSize="25dp"
             android:textStyle="bold" />
@@ -75,37 +77,86 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:text="Name"
-            android:textSize="20dp" />
+            android:textSize="15dp" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/btn_showmenu"
+                android:layout_width="25dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/show_menu"
+                android:layout_gravity="right" />
+        </FrameLayout>
 
         <LinearLayout
-            android:id="@+id/linerLayout1"
+            android:id="@+id/liner_right"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:orientation="vertical"
-            android:textColor="#333">
+            >
 
             <TextView
                 android:id="@+id/tv_phone"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="2dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="2dp"
-                android:text="Phone"
-                android:textSize="12dp"
-                android:textStyle="italic" />
+                android:layout_height="25dp"
+                android:gravity="center_vertical"
+                android:text="Phone" />
 
             <TextView
                 android:id="@+id/tv_email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="2dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="2dp"
-                android:text="Email"
-                android:textSize="12dp"
-                android:textStyle="italic" />
+                android:layout_height="25dp"
+                android:gravity="center_vertical"
+                android:text="Email" />
         </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/liner_info"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_callone"
+            android:background="@drawable/phone_icon_1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="20dp" />
+
+        <Button
+            android:id="@+id/btn_calltwo"
+            android:background="@drawable/phone_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp" />
+
+        <Button
+            android:id="@+id/btn_message"
+            android:background="@drawable/message_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
+
+        <Button
+            android:id="@+id/btn_info"
+            android:background="@drawable/info_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"/>
     </LinearLayout>
 
 
