--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#eee">
+    <SearchView
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="30dp"
+        android:background="#eee" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <ListView
-            android:id="@+id/lv_contacts"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:divider="@null"/>
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ListView
+                android:id="@+id/lv_contacts"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@null"
+                android:scrollbars="none" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/catalog"
+            android:layout_width="15dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="#eee"
+            android:paddingBottom="5dp"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:paddingTop="15dp">
+
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:id="@+id/catalog"
-        android:layout_width="15dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="#eee"
-        android:paddingRight="3dp"
-        android:paddingLeft="3dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="5dp">
-    </LinearLayout>
+
 </LinearLayout>
