--- a/app/src/main/res/layout/contacts_infopage.xml
+++ b/app/src/main/res/layout/contacts_infopage.xml
@@ -49,14 +49,40 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="35dp"
                 app:cardCornerRadius="4dp">
-                <TextView
-                    android:id="@+id/tv_phone_info"
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="20dp"
-                    android:textColor="#000"
-                    android:text="Phone"
-                    android:layout_margin="10dp"/>
+                    android:orientation="vertical"
+                    android:layout_margin="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_phone_page"
+                            android:layout_width="250dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp"
+                            android:text="通话记录"
+                            android:textColor="#000"
+                            android:textSize="20dp"
+                            android:textStyle="bold" />
+
+                        <Button
+                            android:id="@+id/btn_call_page"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:background="@drawable/icon_phone_gray" />
+                    </LinearLayout>
+
+                    <ListView
+                        android:id="@+id/lv_phone_call"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
 
             </android.support.v7.widget.CardView>
             <android.support.v7.widget.CardView
@@ -67,14 +93,26 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="35dp"
                 app:cardCornerRadius="4dp">
-                <TextView
-                    android:id="@+id/tv_message_info"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="20dp"
-                    android:textColor="#000"
-                    android:text="Message"
-                    android:layout_margin="10dp"/>
+                    android:orientation="vertical"
+                    android:layout_margin="10dp">
+
+                    <TextView
+                        android:id="@+id/tv_message_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="消息记录"
+                        android:textSize="15dp"
+                        android:textColor="#000"
+                        android:textStyle="bold" />
+
+                    <ListView
+                        android:id="@+id/elv_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
             </android.support.v7.widget.CardView>
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -84,6 +122,7 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="35dp"
                 app:cardCornerRadius="4dp">
+
                 <TextView
                     android:id="@+id/tv_remark_info"
                     android:layout_width="match_parent"
@@ -92,6 +131,7 @@
                     android:textColor="#000"
                     android:text="Remake"
                     android:layout_margin="10dp"/>
+
             </android.support.v7.widget.CardView>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
