--- a/app/src/main/res/layout/contacts_infopage.xml
+++ b/app/src/main/res/layout/contacts_infopage.xml
@@ -33,14 +33,26 @@
                 app:layout_collapseMode="pin"/>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@drawable/icon_more_info"
+        app:layout_anchor="@id/appBar"
+        app:layout_anchorGravity="bottom|end" />
+
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -52,9 +64,159 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_margin="10dp">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_remark_info"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp"
+                            android:text="联系人信息"
+                            android:textColor="#000"
+                            android:textSize="20dp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <TableLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="5dp">
+
+                            <TextView
+                                android:id="@+id/textView5"
+                                android:layout_width="40dp"
+                                android:layout_height="wrap_content"
+                                android:text="姓名"
+                                android:textColor="#000"
+                                android:textSize="15dp" />
+
+                            <TextView
+                                android:id="@+id/intro_name"
+                                android:layout_width="110dp"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="12dp" />
+
+                            <TextView
+                                android:id="@+id/textView"
+                                android:layout_width="40dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:text="电话"
+                                android:textColor="#000"
+                                android:textSize="15dp" />
+
+                            <TextView
+                                android:id="@+id/intro_phone"
+                                android:layout_width="120dp"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="12dp" />
+                        </TableRow>
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="5dp">
+
+                            <TextView
+                                android:id="@+id/textView6"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="邮箱"
+                                android:textColor="#000"
+                                android:textSize="15dp" />
+
+                            <TextView
+                                android:id="@+id/intro_email"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="12dp" />
+
+                            <TextView
+                                android:id="@+id/textView2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:text="地址"
+                                android:textColor="#000"
+                                android:textSize="15dp" />
+
+                            <TextView
+                                android:id="@+id/intro_address"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="12dp" />
+                        </TableRow>
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="5dp">
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="职业"
+                                android:textColor="#000"
+                                android:textSize="15dp" />
+
+                            <TextView
+                                android:id="@+id/intro_job"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="12dp" />
+
+                            <TextView
+                                android:id="@+id/textView4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:text="年龄"
+                                android:textColor="#000"
+                                android:textSize="15dp" />
+
+                            <TextView
+                                android:id="@+id/intro_age"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="12dp" />
+                        </TableRow>
+                    </TableLayout>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="35dp"
+                app:cardCornerRadius="4dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -63,7 +225,7 @@
 
                         <TextView
                             android:id="@+id/tv_phone_page"
-                            android:layout_width="250dp"
+                            android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
                             android:text="通话记录"
@@ -75,45 +237,36 @@
                             android:id="@+id/btn_call_page"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
                             android:background="@drawable/icon_phone_gray" />
+
+                        <Button
+                            android:id="@+id/btn_show_call"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/show_menu" />
                     </LinearLayout>
 
                     <ListView
                         android:id="@+id/lv_phone_call"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="35dp"
-                app:cardCornerRadius="4dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_margin="10dp">
+                        android:layout_height="69dp"
+                        android:visibility="gone" />
 
                     <TextView
-                        android:id="@+id/tv_message_info"
+                        android:id="@+id/none_call_info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="消息记录"
-                        android:textSize="15dp"
-                        android:textColor="#000"
-                        android:textStyle="bold" />
-
-                    <ListView
-                        android:id="@+id/elv_message"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:text="无更多信息..."
+                        android:textSize="13dp"
+                        android:textStyle="italic"
+                        android:visibility="gone" />
                 </LinearLayout>
+
             </android.support.v7.widget.CardView>
+
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -123,25 +276,59 @@
                 android:layout_marginTop="35dp"
                 app:cardCornerRadius="4dp">
 
-                <TextView
-                    android:id="@+id/tv_remark_info"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="20dp"
-                    android:textColor="#000"
-                    android:text="Remake"
-                    android:layout_margin="10dp"/>
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_message_info"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp"
+                            android:text="通信记录"
+                            android:textColor="#000"
+                            android:textSize="20dp"
+                            android:textStyle="bold" />
+
+                        <Button
+                            android:id="@+id/btn_message_page"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:background="@drawable/icon_message_gray" />
+
+                        <Button
+                            android:id="@+id/btn_show_message"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/show_menu" />
+                    </LinearLayout>
+
+                    <ListView
+                        android:id="@+id/lv_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="65dp"
+                        android:visibility="gone"/>
+                    <TextView
+                        android:id="@+id/none_message_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="无更多信息..."
+                        android:textSize="13dp"
+                        android:textStyle="italic"
+                        android:visibility="gone" />
+                </LinearLayout>
             </android.support.v7.widget.CardView>
+
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:src="@drawable/icon_more_info"
-        app:layout_anchor="@id/appBar"
-        app:layout_anchorGravity="bottom|end" />
 </android.support.design.widget.CoordinatorLayout>
