增加了添加联系人与修改联系人的功能。

--- a/app/src/main/res/layout/addcontact_page.xml
+++ b/app/src/main/res/layout/addcontact_page.xml
@@ -167,7 +167,7 @@
                                     android:ems="10"
                                     android:inputType="textPersonName"
                                     android:textSize="12dp"
-                                    android:hint="Email" />
+                                    android:hint="Address" />
                             </TableRow>
                             <TableRow
                                 android:layout_width="match_parent"
