--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -56,7 +57,7 @@
                 android:paddingBottom="5dp"
                 android:paddingLeft="3dp"
                 android:paddingRight="3dp"
-                android:paddingTop="15dp">
+                android:layout_marginTop="50dp">
 
             </LinearLayout>
         </LinearLayout>
@@ -66,6 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:src="@drawable/icon_add"
-            android:layout_margin="16dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="40dp"
             android:backgroundTint="#231f20" />
 </android.support.design.widget.CoordinatorLayout>
