--- a/app/src/main/res/layout/item_message_info.xml
+++ b/app/src/main/res/layout/item_message_info.xml
@@ -60,7 +60,7 @@
             android:layout_height="30dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="10dp"
-            app:srcCompat="@drawable/send_icon" />
+            app:srcCompat="@drawable/message_send" />
     </LinearLayout>
 
 
@@ -77,7 +77,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/get_icon" />
+            app:srcCompat="@drawable/message_get" />
 
         <LinearLayout
             android:layout_width="wrap_content"
