--- a/app/src/main/res/layout/page_begin.xml
+++ b/app/src/main/res/layout/page_begin.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#333">
+
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tv_app_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="#fff"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:text="简\n   讯" />
 </FrameLayout>
 
