--- a/app/src/main/res/layout/page_contacts_list.xml
+++ b/app/src/main/res/layout/page_contacts_list.xml
@@ -26,10 +26,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:baselineAligned="false"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">
@@ -66,8 +67,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:src="@drawable/icon_add"
-            android:layout_marginRight="15dp"
+            android:src="@drawable/fbutton_add"
+            android:layout_marginEnd="15dp"
             android:layout_marginBottom="40dp"
             android:backgroundTint="#231f20" />
 </android.support.design.widget.CoordinatorLayout>
