在通讯记录页中可点击item打电话或发短信。

--- a/app/src/main/res/layout/page_message_and_call.xml
+++ b/app/src/main/res/layout/page_message_and_call.xml
@@ -6,27 +6,39 @@
     android:layout_height="match_parent"
     android:background="#eee"
     android:orientation="vertical">
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#eee">
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
-        app:tabGravity="fill"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#eee"
-        app:tabMode="fixed"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-    </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="608dp"
-        android:layout_gravity="bottom"
-        android:background="#ffffff" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#334">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#334"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                app:tabTextColor="#ccc"
+                app:tabSelectedTextColor="#c67c7c"
+                app:tabIndicatorColor="#c65c5c"
+                app:tabGravity="fill"
+                app:tabMode="fixed" />
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:background="#eee" />
+
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_contact"
